ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wouritech.com
        - api.wouritech.com
        - www.wouritech.com
        - internal.wouritech.com
      secretName: tls-secret
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 80
  rules:
    - host: wouritech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-backend-svc
                port:
                  number: 80
